# ObVi-SLAM

./: .CMakeLists.txt.swp  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  interpolated_poses.csv  manifest.xml  online_main  ovslam.rviz  parsedClusters.csv  poses.csv  tmp.txt
.github/workflows/: clang-format-check.yml
config/: 1.json  10_two_phase_off.json  10_two_phase_off_first_100.json  10_two_phase_off_first_100_wide_shape_prior.json  10_two_phase_off_first_75.json  10_two_phase_off_first_75_wide_shape_prior.json  11.json  12.json  2.json  3.json  3_higher_obj_thresh_lower_conf.json  3_higher_obj_threshold.json  4.json  4_higher_obj_thresh_lower_conf.json  4_higher_obj_thresh_lower_conf_fix_traj.json  4_higher_obj_thresh_lower_conf_two_phase_off.json  5.json  6.json  6_data_assoc_only.json  6_first_25.json  6_two_phase_off.json  7.json  7_data_assoc_only.json  7_data_assoc_only_flir.json  7_data_assoc_only_flir_freq.json  7_two_phase_off.json  7_two_phase_off_first_25.json  7_two_phase_off_first_250.json  8.json  8_two_phase_off.json  8_two_phase_off_first_100.json  8_two_phase_off_first_100_wide_shape_prior.json  8_two_phase_off_first_25.json  8_two_phase_off_first_250.json  9.json  9_two_phase_off.json  backup_4.json  base.json  base2.json  base3.json  (+80 more)
config/amazon_0523/: amazon_0523_conf_0_05.json  amazon_0523_conf_0_6.json
config/single_bag_tuning/: base.json  base_no_two_phase.json
config/taijing/: 6_no_object.json  6_no_two_phase.json  6_no_two_phase_no_object.json  7_epipolar_replication.json  7_expt_no_object.json  8_no_two_phase.json  8_replication_20230416.json  9.json  9_30_iters_local_global.json  9_no_essential_matrix.json  9_no_two_phase.json  9_no_two_phase_no_essential_matrix.json
configs/iv_bbox/: cones.yaml  conesCODa.yaml  debug.yaml  merge_dataset.yaml
convenience_scripts/: bounding_box_csv_creator.sh  bounding_box_extractor.sh  check_timestamp.py  cobot_real_data_ellipsoid_estimator.sh  consecutive_mapping_executions.sh  data_assoc_cobot_real_data_ellipsoid_estimator.sh  debug_jacobian_hessian_diagonal.sh  debug_jacobian_problems_with_images.sh  eer_real_data_estimator.sh  localization_rosbag_extraction.sh  merge_dataset.py  orb_post_processor.sh  run_with_jacobian_data_output_eer_real_data_estimator.sh  start_visualizer_and_play_bag.sh  vslam.sh  vslam_debug.sh  vslam_debug_alienware.sh  vslam_debug_epipolar_err.sh  vslam_debug_inputs.sh  vslam_debug_stage1.sh  vslam_debug_viz.py  vslam_kitti.sh
convenience_scripts/debugging/: amanda_copy_key_results_for_run_from_server.sh  debug_jacobian_problems_with_images.sh
convenience_scripts/docker/: droid_slam_data_generator.sh  droid_slam_metrics_generator.sh  droid_slam_sequence_executor.sh  high_res_orbslam2_multibags_executor.sh  high_res_orbslam3_metrics_generator.sh  high_res_orbslam3_sequence_executor.sh  high_res_ut_vslam_sequence_executor.sh  oa_slam_data_generator.sh  oa_slam_metrics_generator.sh  oa_slam_sequence_executor.sh  trajectory_sequence_executor.sh  ut_vslam_metrics_generator.sh
convenience_scripts/experiments/: start_visualizer_and_play_bag.sh
convenience_scripts/old/: bounding_box_extractor.sh  run_with_jacobian_data_output_eer_real_data_estimator.sh
convenience_scripts/podman/: cube_slam_data_generator.sh  droid_slam_data_generator.sh  droid_slam_metrics_generator.sh  droid_slam_sequence_executor.sh  (+18 more)
docker/: orb_slam3_metrics_generator.sh
include/: .unproject.h.swp  bounding_box_factor.h  draw_epipolar_lines.h  draw_epipolar_lines.hpp  ellipsoid_utils.h  object_slam_backend_solver.h  object_slam_problem_params.h  odometry_cost_functor.h  pairwise_2d_feature_cost_functor.h  pose_viewer.h  reprojection_cost_functor.h  shape_prior_factor.h  slam_backend_solver.h  slam_solver_optimizer_params.h  structured_object_slam_problem_params.h  structured_slam_problem_params.h  structureless_ceres_visualization_callback.h  structureless_object_slam_problem_params.h  structureless_slam_problem_params.h  unproject.h  visual_slam_ceres_visualization_callback.h  vslam_io.h  vslam_math_util.h  vslam_noise_util.h  vslam_type_conversion_util.h  vslam_types.h  vslam_types_math_util.h  vslam_unproject.h  vslam_util.h
launch/: ovslam.rviz  ovslam_rviz.launch  single_cam_bb_view_ovslam.rviz  taijing_alienware_ovslam.rviz  taijing_alienware_single_cam_bb_view_ovslam.rviz
metrics_plotting_configs/: amazon_0523_v0.csv  amazon_0523_v0_bug_fix.csv  evaluation_2023_07_v1_orb_draft.csv  evaluation_7a_1_fallback_a_2_ablations.csv  evaluation_best_against_orb_and_oa.csv  evaluation_best_against_orb_and_oa_and_droid.csv  evaluation_best_against_orb_and_oa_and_droid_0821.csv  plotting_config_generator.py  podman_amazon_0523_cdf.csv  podman_results_root_dir.csv  test_cdf_metrics.csv
output/: answer.txt  gt.txt  start.txt
podman/: oa_slam_data_generator.sh  oa_slam_metrics_generator.sh  ut_vslam_metrics_generator.sh
sequences/: 1669743059_only.json  1676766718_only.json  1678400860_only.json  1678401418_only.json  2023-05-12_morning.json  20230218_1a_4a.json  20230218_all.json  20230511183554.json  3059_9589.json  amazon_0523_v0.json  end_of_may_demo_v1.json  evaluation_2023_07_v1.json  high_res_20230218_1a.json  high_res_20230218_1a_7326.json  high_res_20230218_1a_7326_wp.json  high_res_7326_20230218_1a.json  high_res_7326_7619.json  taijing_20230218_1a.json  taijing_7326.json  tum_fr2_desk.json
src/: .unproject_main.cpp.swp  bounding_box_factor.cpp  draw_epipolar_lines.cpp  ellipsoid_estimator_main.cpp  ellipsoid_estimator_real_data_main.cpp  ellipsoid_utils.cpp  main.cpp  object_slam_backend_solver.cpp  online_main.cpp  pairwise_2d_feature_cost_functor.cpp  pose_viewer.cpp  reprojection_cost_functor.cpp  shape_prior_factor.cpp  slam_backend_solver.cpp  structured_main.cpp  structureless_ceres_visualization_callback.cpp  unproject_main.cpp  vslam_io.cpp  vslam_noise_util.cpp  vslam_type_conversion_util.cpp  vslam_types_math_util.cpp  vslam_util.cpp
symforce/: reprojectionResidual_with_jacobians012.h  reprojection_factor_code_generation.py
(+7765 files in other folders)
